# create-python-server

./: README.md  pyproject.toml
src/create_mcp_server/: __init__.py
src/create_mcp_server/template/: README.md.jinja2  server.py.jinja2  test_server.py.jinja2
src/create_mcp_server/template/notes/: server.py.jinja2
